# android_vendor_qcom_proprietary

commonsys-intf/sensors-see/USTA/native/: Android.mk  Makefile.am  com_qualcomm_qti_usta_core_SensorContextJNI.cpp  sensor.cpp  sensor.h  sensor_attributes.cpp  sensor_attributes.h  sensor_cxt.cpp  sensor_cxt.h  sensor_descriptor_pool.cpp  sensor_message_parser.cpp  sensor_message_parser.h  sensor_suid.cpp
commonsys-intf/sensors-see/sensors-diag-log/: Android.mk  Makefile.am
commonsys-intf/sensors-see/sensors-diag-log/inc/: sensor_diag_log.h
commonsys-intf/sensors-see/sensors-diag-log/src/: sensor_diag_log.cpp
commonsys-intf/sensors-see/sensors-log/: Android.mk  Makefile.am  sensors_log.h  sensors_timeutil.h
commonsys-intf/sensors-see/ssc/: Android.mk  Makefile.am  ssc_connection.cpp  ssc_connection.h  ssc_utils.cpp  ssc_utils.h  wakelock_utils.cpp  wakelock_utils.h  worker.h
commonsys-intf/sensors-see/ssc/proto/: Makefile.am
gps/garden-app/GARDEn/: Android.mk  Makefile.am  main.cpp
gps/garden-app/GARDEn/clientapi_case/: LocationClientApiCase.cpp
gps/garden-app/GARDEn/garden_framework/: GnssCbBase.cpp  IGnssAPI.h
gps/garden-app/GARDEn/gnss_multiclient_case/: GnssMultiClientHidlILocHidlGnss.cpp  GnssMultiClientHidlILocHidlGnss.h  GnssMultiClientHidlILocHidlGnssCb.h
gps/garden-app/GARDEn/locationapi_api/: GnssLocationAPI.h
gps/garden-app/GARDEn/locationclient_api/: GnssLocationClientAPI.cpp  GnssLocationClientAPI.h
mm-audio-auto-cal/audio-cal-param/src/: Makefile.am  audcalparam_api.c  audcalparam_api_priv.h  audcalparam_serv_con.c  audcalparam_serv_con.h
mm-video-utils/vtest-omx/: Android.mk  Makefile.am
mm-video-utils/vtest-omx/app/src/: vtest_App.cpp
mm-video-utils/vtest-omx/common/inc/: vtest_ComDef.h  vtest_Config.h  vtest_Debug.h  vtest_Decoder.h  vtest_Encoder.h  (+18 more)
sensors-see/: Makefile.am  configure.ac  sensors-see.pc.in
sensors-see/QSensorTest/: Android.mk  AndroidManifest.xml
sensors-see/api/: Android.mk
sensors-see/api/inc/: sns_client_api_v01.h
sensors-see/build_config/: sns_vendor_board.mk  sns_vendor_product.mk
sensors-see/hal-2.0-hidl-impl/: Android.mk  NOTICE  sensors_hw_module.cpp  sensors_hw_module.h  sensors_hw_module_stub.cpp  service.cpp
sensors-see/nanopb/: Android.mk  Makefile.am
sensors-see/nanopb/src/: pb_decode.c  pb_encode.c
sensors-see/registry/: Android.mk
sensors-see/reverserpc/: Android.mk
sensors-see/reverserpc/inc/: remote.h  reverserpc_arm.h  rpcmem.h
sensors-see/reverserpc/src/: sns_registry_imp.c  sns_registry_skel.c
sensors-see/sensorcal-hidl-impl/: Android.mk  SensorsCalibrate.cpp  SensorsCalibrate.h  vendor.qti.hardware.sensorscalibrate@1.0-service-disable.rc
sensors-see/sensordaemon/: Android.mk  Makefile.am
sensors-see/sensordaemon/src/: aont.cpp  aont.h  sensordaemon.cpp
sensors-see/sensors-hal/: Android.mk  Makefile.am
sensors-see/sensors-hal-2.0/: Android.mk  integer_overflow_blacklist.txt  sensors_list.txt
sensors-see/sensors-hal-2.0/framework/: LICENSE  NOTICE  direct_channel.cpp  direct_channel.h  rpcmem_android.c  sensor.cpp  sensor.h  sensor_factory.cpp  sensor_factory.h  sensors_hal.cpp  sensors_hal.h  sensors_hal_common.h  sensors_qti.h  ssc_sensor.cpp  ssc_sensor.h
sensors-see/sensors-hal-2.0/sensors/: accelerometer.cpp  additionalinfo_sensor.cpp  additionalinfo_sensor.h  ambient_light.cpp  device_orient.cpp  game_rv.cpp  gravity.cpp  gyroscope.cpp  hall_effect.cpp  heart_rate.cpp  lin_accel.cpp  magnetometer.cpp  motion_detect.cpp  offbody_detect.cpp  proximity.cpp  rgb.cpp  sar.cpp  sig_motion.cpp  stationary_detect.cpp  step_count.cpp  step_detect.cpp  tilt.cpp  wrist_tilt.cpp
sensors-see/sensors-hal/framework/: NOTICE  direct_channel.cpp  direct_channel.h  rpcmem_android.c  sensor.cpp  sensor.h  sensor_factory.cpp  sensor_factory.h  sensors-base.h  sensors.h  sensors_hal.cpp  sensors_hal.h  sensors_hal_stub.cpp  sensors_hw_module.cpp  sns_reg_config.cpp  ssc_sensor.cpp  ssc_sensor.h
sensors-see/sensors-hal/sensors/: accelerometer.cpp  additionalinfo_sensor.cpp  ambient_light.cpp  device_orient.cpp  geomag_rv.cpp  gyroscope.cpp  hall_effect.cpp  heart_rate.cpp  magnetometer.cpp  motion_detect.cpp  offbody_detect.cpp  ppg.cpp  proximity.cpp  rgb.cpp  rotv.cpp  sig_motion.cpp  stationary_detect.cpp  step_count.cpp  step_detect.cpp  tilt.cpp  wrist_tilt.cpp
sensors-see/sns_low_lat_vendor/: Android.mk
sensors-see/sns_low_lat_vendor/inc/: sns_low_lat_stream.h
sensors-see/sns_low_lat_vendor/src/: sns_low_lat_stream_stub.c
sensors-see/sscrpcd/: Android.mk
sensors-see/sscrpcd/src/: sscrpcd.cpp
sensors-see/test/hal_tests/: Android.mk  Makefile.am  sns_espplus_testapp.c  sns_hal_batch_fmq.cpp  sns_hidl_hal_batch.cpp  sns_hidl_hal_batch_fmq.cpp
sensors-see/test/see_conc_horse/: see_conc_horse.cpp
sensors-see/test/see_moast/: Android.mk  Extras.cpp  Extras.h  Moast.cpp  Moast.h  Parser.cpp  Parser.h  RandTemplate_Impl.hpp  Utility.cpp  Utility.h  main.cpp
sensors-see/test/see_resampler/: Makefile.am  see_resampler.cpp
sensors-see/test/see_salt/: Android.mk  Makefile.am  por.cpp  salt_usta.cpp  salt_usta.h  see_salt.cpp  see_salt.h  see_salt_payloads.h  see_salt_request.h  see_salt_sensor.cpp  see_salt_sensor.h  see_salt_sleep.cpp
sensors-see/test/see_selftest/: see_selftest.cpp
sensors-see/test/see_stability/: Makefile.am  Parser.cpp  Parser.h  StabilityEngine.cpp  StabilityEngine.h  TestCase.cpp  TestCase.h  Utility.cpp  Utility.h  main.cpp
sensors-see/test/see_workhorse/: Android.mk  Makefile.am  see_workhorse.cpp
sensors-see/test/sensors_calibrate/: Android.mk  sensors_calibrate.cpp  ssc_calibrate.cpp  ssc_calibrate.h
sensors-see/test/sns_client_example/: Android.mk
sensors-see/test/sns_client_example_cpp/: Android.mk
sensors-see/test/sns_ext_svc_test/: Android.mk
sensors-see/test/sns_qsocket_test/: Android.mk
sensors-see/test/ssc_drva_test/: Android.mk  Makefile.am  ssc_drva_test.cpp
sensors-see/test/ssc_sensor_info/: Android.mk  Makefile.am  ssc_sensor_info.cpp
sensors-see/test/ssc_threshold/: Android.mk  ssc_threshold.cpp
(+9730 files in other folders)
